--- a/src/App.css
+++ b/src/App.css
@@ -88,3 +88,12 @@
     left:35%;
     background-color: aqua;
 }
+.list{
+    width: 1000px;
+	height: 1000px;
+    position: absolute;
+    float: left;
+	left: 40%;
+	top:600px;
+	transform: translate(-50%,-50%);
+}
